# nzb-streamer

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  STRUCTURE.md
src/: error.rs  lib.rs  main.rs  streaming.rs
src/archive/: error.rs  mod.rs  par2.rs  rar.rs
src/http/: mod.rs  range.rs  response.rs  routes.rs  server.rs
src/mkv/: mkv.rs  mod.rs
src/nntp/: client.rs  config.rs  connection.rs  error.rs  live.rs  mock.rs  mod.rs  pool.rs  simple.rs  types.rs  yenc.rs
src/nzb/: error.rs  mod.rs  parser.rs  types.rs
src/par2/: deobfuscate.rs  error.rs  hash.rs  manifest.rs  matcher.rs  mod.rs  packet.rs  par2_crc32.rs  parser.rs  rar.rs
src/rar/: mod.rs  parser.rs  types.rs
src/scheduler/: adaptive.rs  batch.rs  error.rs  job_processor.rs  mod.rs  queue.rs  writer.rs
src/session/: mod.rs
src/stream/: archive.rs  error.rs  mod.rs  orchestrator.rs  segment_tracker.rs  virtual_file_streamer.rs
src/streamer/: archive.rs  mod.rs  virtual_file_streamer.rs
src/vfs/: cache.rs  mapper.rs  mod.rs  session.rs
tests/: nzb_parsing.rs
tests/fixtures/: simple.nzb
