[package]
name = "nzb-streamer"
version = "0.1.0"
edition = "2024"
authors = ["Neel Chotai"]
description = "Stream video files from Usenet NZBs without full download"
license = "MIT"
default-run = "nzb-streamer"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

tokio = { version = "1.47", features = ["full"] }

clap = { version = "4.5", features = ["derive"] }
futures = "0.3"

rek2_nntp = { path = "/home/neel/projects/rek2_nntp" }
yenc = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
hex = "0.4"
derive_more = { version = "2.0", features = ["full"] }

http = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }

nzb-rs = "0.5.12"
byteorder = "1.5.0"
config = "0.15.13"
backoff = { version = "0.4.0", features = ["tokio"] }
async-stream = "0.3.6"
dashmap = "6.1.0"
deadpool = { version = "0.12.2", features = ["managed", "rt_tokio_1"] }
shrinkwraprs = "0.3.0"
async-channel = "2.5.0"
itertools = "0.14.0"
arc-swap = "1.7.1"
parking_lot = "0.12.4"
md-5 = "0.10.6"
ordered-stream = "0.2.0"
memmap2 = "0.9.7"
rustix = { version = "1.0.8", features = ["fs"] }
drill-press = "0.1.2"
tokio-stream = "0.1.17"

[dev-dependencies]
tempfile = "3"
mockito = "1"
criterion = "0.6"
pretty_assertions = "1"
axum-test = "16"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[[bin]]
name = "nzb-streamer"
path = "src/main.rs"
